--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "yarn"
-    directory: "."
+  - package-ecosystem: 'yarn'
+    directory: '.'
     schedule:
-      interval: "monthly"
+      interval: 'monthly'
