--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "license": "UNLICENSED",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -20,40 +20,40 @@
     "format": "prettier . -w"
   },
   "dependencies": {
-    "@manypkg/cli": "^0.21.1",
-    "@react-navigation/bottom-tabs": "^6.5.9",
-    "@react-navigation/native": "^6.1.8",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@types/eslint": "^8.44.4",
-    "@types/react": "18.2.48",
-    "@types/react-native": "~0.72.3",
-    "@types/react-native-loading-spinner-overlay": "^0.5.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.7.5",
-    "axios": "^1.6.4",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@manypkg/cli": "^0.21.2",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@reduxjs/toolkit": "^2.1.0",
+    "@types/eslint": "^8.56.2",
+    "@types/react": "18.2.55",
+    "@types/react-native": "~0.73.0",
+    "@types/react-native-loading-spinner-overlay": "^0.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "axios": "^1.6.7",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^12.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.0.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^5.0.1",
-    "expo": "^50.0.0",
-    "expo-location": "~16.1.0",
-    "expo-updates": "~0.18.18",
-    "prettier": "^3.0.3",
+    "eslint-plugin-prettier": "^5.1.3",
+    "expo": "^50.0.6",
+    "expo-location": "~16.5.3",
+    "expo-updates": "~0.24.10",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "0.73.4",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-web": "~0.19.9",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "ts-debounce": "^4.0.0",
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": ">=16.0.0",
+    "node": ">=16.0.0 <=21.x.x",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "resolutions": {
