--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather_app",
   "version": "1.0.27",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "bugs": "https://github.com/fadihanna123/WeatherApp/issues",
