--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint .",
-    "format": "prettier . -w"
+    "format": "prettier . -w",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@manypkg/cli": "^0.21.4",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@reduxjs/toolkit": "^2.2.5",
@@ -31,7 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "7.11.0",
     "axios": "^1.7.2",
-    "eslint": "^8.57.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
     "eslint-plugin-import": "^2.29.1",
@@ -58,5 +58,9 @@
   },
   "resolutions": {
     "@types/react": "17.0.21"
+  },
+  "devDependencies": {
+    "husky": "^9.0.11",
+    "typescript-eslint": "^7.12.0"
   }
 }
