--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "setup": "yarn --emoji --silent --ignore-scripts"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/eslint": "^8.56.6",
-    "@types/react": "18.3.5",
+    "@types/react": "18.2.79",
     "@types/react-native": "~0.73.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.6",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -36,22 +37,21 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
     "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.2.1",
     "expo": "^51.0.32",
     "expo-location": "~17.0.1",
     "expo-updates": "~0.25.24",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
-    "react-native": "0.75.2",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.10.9",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-web": "~0.19.12",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "5.5.4"
+    "typescript": "~5.3.3"
   },
   "engines": {
     "node": ">=16.0.0 <=21.x.x",
@@ -61,6 +61,11 @@
     "@types/react": "17.0.21"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
+    "eslint-plugin-jsdoc": "^50.2.2",
+    "globals": "^15.9.0",
     "husky": "^9.1.5",
     "typescript-eslint": "^7.16.0"
   }
