--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "license": "MIT",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
@@ -26,14 +26,14 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@reduxjs/toolkit": "^2.2.7",
-    "@types/eslint": "^8.56.6",
-    "@types/react": "18.3.5",
+    "@types/eslint": "^9.6.1",
+    "@types/react": "18.2.79",
     "@types/react-native": "~0.73.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.6",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "8.5.0",
     "axios": "1.7.7",
-    "eslint": "8.57.0",
+    "eslint": "9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-universe": "^13.0.0",
     "eslint-plugin-import": "^2.30.0",
@@ -43,10 +43,10 @@
     "expo-location": "~17.0.1",
     "expo-updates": "~0.25.24",
     "prettier": "^3.3.3",
-    "react": "18.3.1",
-    "react-native": "0.75.2",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.11.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-web": "~0.19.12",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
@@ -66,7 +66,7 @@
     "@eslint/js": "^9.10.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "globals": "^15.9.0",
-    "husky": "^9.1.5",
-    "typescript-eslint": "^7.16.0"
+    "husky": "^9.1.6",
+    "typescript-eslint": "8.5.0"
   }
 }
