--- a/package.json
+++ b/package.json
@@ -24,50 +24,50 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.5.0",
     "@types/eslint": "^9.6.1",
-    "@types/react": "18.2.79",
+    "@types/react": "~18.3.12",
     "@types/react-native": "~0.73.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.6",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "8.6.0",
-    "axios": "1.7.7",
-    "eslint": "9.11.0",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "8.19.1",
+    "axios": "1.7.9",
+    "eslint": "9.18.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-universe": "^13.0.0",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-config-universe": "^14.0.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.2.1",
-    "expo": "~51.0.34",
-    "expo-location": "~17.0.1",
-    "expo-updates": "~0.25.25",
-    "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "~52.0.25",
+    "expo-location": "~18.0.5",
+    "expo-updates": "~0.26.12",
+    "prettier": "^3.4.2",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-web": "~0.19.12",
-    "react-redux": "^9.1.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-web": "~0.19.13",
+    "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "ts-debounce": "^4.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.7.3"
   },
   "engines": {
-    "node": ">=16.0.0 <=21.x.x",
+    "node": ">=16.0.0 <=22.x.x",
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "resolutions": {
     "@types/react": "17.0.21"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.11.1",
-    "eslint-plugin-jsdoc": "^50.3.0",
-    "globals": "^15.9.0",
-    "husky": "^9.1.6",
-    "typescript-eslint": "8.7.0"
+    "@eslint/compat": "^1.2.5",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.18.0",
+    "eslint-plugin-jsdoc": "^50.6.1",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "typescript-eslint": "8.19.1"
   }
 }
