--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "weather_app",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "license": "MIT",
   "private": true,
-  "lastUgrade": "20250903",
+  "lastUgrade": "20250921",
   "main": "node_modules/expo/AppEntry.js",
   "bugs": "https://github.com/fadihanna123/WeatherApp/issues",
   "repository": {
@@ -20,22 +20,21 @@
     "clear": "rimraf ./node_modules ./dist"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/ngrok": "4.1.3",
     "@react-navigation/bottom-tabs": "7.4.7",
     "@react-navigation/native": "7.1.17",
     "@reduxjs/toolkit": "2.9.0",
-    "@types/react": "~19.0.10",
-    "axios": "1.12.0",
-    "expo": "~53.0.22",
-    "expo-location": "~18.1.6",
-    "expo-updates": "~0.28.17",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
+    "axios": "1.12.2",
+    "expo": "~54.0.9",
+    "expo-location": "~19.0.7",
+    "expo-updates": "~29.0.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.1",
     "react-redux": "9.2.0",
     "redux": "5.0.1"
   },
@@ -44,7 +43,8 @@
     "npm": "Please use Yarn instead of NPM to install dependencies"
   },
   "devDependencies": {
-    "globals": "16.3.0",
-    "typescript": "~5.8.3"
+    "globals": "16.4.0",
+    "typescript": "~5.9.2",
+    "@types/react": "~19.1.13"
   }
 }
