--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather_app",
-  "version": "1.0.34",
+  "version": "1.0.35",
   "license": "MIT",
   "private": true,
   "lastUgrade": "20251029",
@@ -22,6 +22,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@expo/ngrok": "4.1.3",
+    "@fortawesome/fontawesome-svg-core": "7.2.0",
+    "@fortawesome/free-solid-svg-icons": "7.2.0",
+    "@fortawesome/react-native-fontawesome": "0.3.2",
     "@react-navigation/bottom-tabs": "7.8.4",
     "@react-navigation/native": "7.1.19",
     "axios": "1.13.5",
@@ -33,6 +36,7 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.2"
   },
   "engines": {
